@@ -36,7 +36,8 @@ v1.2.1
 + added config setting to optionally convert imdb movie information to UTF8
 ! imdb::alsoknow() fixed (IMDB site changes)
 + new class imdb_movielist added. First methods allow to retrieve a list of
-  movies for a given year and country / year and language.
+  movies for a given year and country / year and language, as well as the 10
+  most popular movies by year.
 
 v1.2.0 (04.10.2009)
 -------------------
